the rather arbitrary current working directory.
INCOMPATIBILITY.

* Discontinued obsolete attribute "COMP".  Potential INCOMPATIBILITY,
use regular rule composition via "OF" / "THEN", or explicit proof
structure instead.  Note that Isabelle/ML provides a variety of
operators like COMP, INCR_COMP, COMP_INCR, which need to be applied
with some care where this is really required.


*** HOL ***

* Library/Debug.thy and Library/Parallel.thy: debugging and parallel
execution for code generated towards Isabelle/ML.

* Simproc "finite_Collect" rewrites set comprehensions into pointfree
expressions.

* Quickcheck:

  - added an optimisation for equality premises.
    It is switched on by default, and can be switched off by setting
    the configuration quickcheck_optimise_equality to false.    

* The SMT solver Z3 has now by default a restricted set of directly
supported features. For the full set of features (div/mod, nonlinear
arithmetic, datatypes/records) with potential proof reconstruction
failures, enable the configuration option "z3_with_extensions".
Minor INCOMPATIBILITY.

* Sledgehammer:

  - Added MaSh relevance filter based on machine-learning; see the
    Sledgehammer manual for details.
  - Rationalized type encodings ("type_enc" option).
  - Renamed options:
      max_relevant ~> max_facts
      relevance_thresholds ~> fact_thresholds


*** Document preparation ***

* Default for \<euro> is now based on eurosym package, instead of
slightly exotic babel/greek.

* Document variant NAME may use different LaTeX entry point
document/root_NAME.tex if that file exists, instead of the common
document/root.tex.

* Simplified custom document/build script, instead of old-style
document/IsaMakefile.  Minor INCOMPATIBILITY.


*** System ***

* Advanced support for Isabelle sessions and build management, see
"system" manual for the chapter of that name, especially the "isabelle
build" tool and its examples.  INCOMPATIBILITY, isabelle usedir /